--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "yaml.schemas": {
-        "https://json.schemastore.org/jekyll.json": "file:///h%3A/My%20Drive/Projects/nimdvir.github.io/_config.yml"
+        "https://json.schemastore.org/sourcehut-build-0.65.0.json": "file:///h%3A/My%20Drive/Projects/nimdvir.github.io/_config.yml"
     }
 }
