--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 # this file uses prebuilt image in dockerhub
 services:
   jekyll:
-    image: amirpourmand/al-folio:latest
+    image: jekyll/jekyll:latest
     build: .
     ports:
       - 8080:8080
@@ -10,4 +10,4 @@ services:
     volumes:
       - .:/srv/jekyll
     environment:
-      - JEKYLL_ENV=development
+      - "JEKYLL_ENV=development"
