--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: "3"
-# this file uses prebuilt image in dockerhub
+version: '3.9'
+
 services:
   jekyll:
     image: jekyll/jekyll:latest
-    build: .
+    command: jekyll serve --watch --force_polling --host=0.0.0.0 --port=8080
     ports:
-      - 8080:8080
-      - 35729:35729
+      - '8080:8080'
     volumes:
       - .:/srv/jekyll
     environment:
-      - "JEKYLL_ENV=development"
+      - JEKYLL_ENV=development
