--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   jekyll:
     image: jekyll/jekyll:latest
-    command: jekyll serve --watch --force_polling --host=0.0.0.0 --port=8080
+    command: jekyll serve --watch --force_polling --host 0.0.0.0 --port 8080
     ports:
       - '8080:8080'
     volumes:
